Fri Apr 19 14:39:41 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/Log_Category.cpp:
        * ace/Log_Record.cpp:

        Fixed Coverity warnings.

Fri Apr 19 12:02:36 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * contrib/minizip/unzip.c:
        * contrib/minizip/zip.c:
          Fixed warnings

Fri Apr 19 11:15:43 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/IPC_SAP/SOCK_SAP/CPP-inclient.cpp:
        * examples/IPC_SAP/SSL_SAP/SSL-client.cpp:
          Fixed warnings in single threaded builds

Thu Apr 18 16:21:32 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/Log_Category.h:
        * ace/Log_Category.cpp:

        Fixed main thread Log_Category_TSS object not cleaned up before
        program exits.

Mon Apr 15 22:45:14 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.h:
        * ace/Dev_Poll_Reactor.cpp: Changed the repository lock (repo_token_)
          from an ACE_DEV_POLL_TOKEN to ACE_SYNCH_MUTEX and renamed it
          repo_lock_. Gets a few more percent improvement in performance.

Mon Apr 15 17:46:24 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/Log_Category.inl:

        Fixed linking problem for ST build.

Mon Apr 15 14:28:43 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp: Fixed single-threaded build issues.
          Fuzz tweaks.

Mon Apr 15 13:59:55 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * ace/Log_Record.inl:

          Fixed ACE_TRACE macro to match actual method name.

Fri Apr 12 19:49:50 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp:
        * ace/Dev_Poll_Reactor.h: Take advantage of the thread-safe behavior
          of epoll_ctl/epoll_wait and allow changes to the wait set to be made
          without interrupting the waiting leader thread. To make timers and
          notifies more predictable, still allow only one thread to wait for